# ft_vox

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Dependency.cmake
src/: CMakeLists.txt  main.cpp
src/Core/: App.cpp  App.h  KeyCode.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseCode.h  Window.h
src/Events/: Event.h
src/Platform/: MacWindow.cpp  MacWindow.h
